provarAnt/00D180000008cIAEAY/objects/Loop__Insert_Update__c.object
<CustomObject>
    <description>Insert or update any Salesforce object records after a DDP has been completed.</description>
    <fields>
        <fullName>Loop__Advanced_Conditions__c</fullName>
        <inlineHelpText>Example: 1 AND (2 OR 3)</inlineHelpText>
        <label>Advanced Conditions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Attach__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this option is checked, the DDP file(s) will be attached to this object (attach type based on the chosen delivery method). Checking this field will prevent the DDP from being attached to the originating object unless specified in an Insert-Update.</inlineHelpText>
        <label>Attach to this Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Conditions__c</fullName>
        <inlineHelpText>Create or Update this record only if...</inlineHelpText>
        <label>Conditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__DDP__c</fullName>
        <label>DDP</label>
        <referenceTo>Loop__DDP__c</referenceTo>
        <relationshipLabel>Insert-Updates</relationshipLabel>
        <relationshipName>Insert_Updates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Loop__Delivery_Methods__c</fullName>
        <label>Delivery Methods</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Field_Value_Pairs__c</fullName>
        <label>Field-Value Pairs</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Order__c</fullName>
        <inlineHelpText>This number determines the sequence that the Insert-Updates will occur in.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loop__Run_at_Beginning__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, this Insert-Update will be executed at the beginning of the DDP run process.</inlineHelpText>
        <label>Run at Beginning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Submit_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>After the record has been created or updated, it will be submitted for approval. This requires an active approval process to already be in place for this object type. See the Salesforce Help site for more info on Approval Processes.</inlineHelpText>
        <label>Submit for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Use_Admin_Credentials__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, this Insert-Update will be executed using an administrator&apos;s credentials as specified on the DDP Admin tab.</inlineHelpText>
        <label>Use Admin Credentials</label>
        <type>Checkbox</type>
    </fields>
    <label>Insert-Update</label>
    <nameField>
        <label>Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insert-Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>